# JNP5

./: .gitignore  CMakeLists.txt  CitationGraph.cpp  CitationGraph.h  Node.h  Publication.h  README.md  citation_graph.h  dag.h  dag_generator.c  generate_tests.sh  main.cpp  node.cpp  run_stdin_test.sh  run_tests.sh  sandbox.cpp  test_create.cpp  test_dag_operations.cpp  test_exception.cpp  test_official.cpp  test_transaction.cpp  unit_tests.cpp
